# agave

./: .gitignore  Cargo.toml  LICENSE  README.md  agave.bat  agave.nu  agave.ps1  agave.sh  build.rs  clippy.toml  deno.json  index.html  main.css  main.js  rust-toolchain.toml
.cargo/: config.toml
app_test/: Cargo.toml
app_test/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: commands.rs  display.rs  input.rs  lib.rs  state.rs  themes.rs  types.rs
apps/test-app/: Cargo.toml
apps/test-app/src/: lib.rs
apps/zig-app/: build.zig
apps/zig-app/src/: main.zig
crates/: README.md
crates/api/: Cargo.toml
crates/api/src/: clock.rs  config.rs  font.rs  fs.rs  io.rs  lib.rs  process.rs  realm.rs  syscall.rs
crates/api/src/path/: mod.rs
crates/api/src/sys/: allocator.rs  app.rs  ata.rs  clock.rs  cmos.rs  console.rs  diagnostics.rs  error.rs  framebuffer.rs  fs.rs  gdt.rs  globals.rs  idt.rs  interrupts.rs  ioapic.rs  local_apic.rs  logger.rs  mem.rs  memory.rs  mod.rs  monitor.rs  pci.rs  pic.rs  power.rs  process.rs  random.rs  realm.rs  rhai.rs  security.rs  serial.rs  time.rs  vga.rs  virtio.rs  wasm.rs
crates/api/src/sys/acpi/: mod.rs  sdt.rs
crates/api/src/sys/drivers/: mod.rs  virtio_balloon.rs  virtio_block.rs  virtio_console.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  virtio_scsi.rs
crates/api/src/sys/framebuffer/: font.rs  mod.rs  shapes.rs
crates/api/src/sys/framebuffer/display/: mod.rs  text.rs
crates/api/src/sys/fs/: bitmap_block.rs  block_device.rs  device.rs  dir.rs  disk.rs  file.rs  mod.rs  simple_fs.rs  super_block.rs
crates/api/src/sys/ipc/: message_queue.rs  mod.rs  pipes.rs  shared_memory.rs  signals.rs
crates/api/src/sys/network/: dns.rs  ethernet.rs  http.rs  mod.rs  protocols.rs  sockets.rs  tcp.rs  udp.rs
crates/api/src/sys/syscall/: mod.rs  service.rs
crates/api/src/sys/task/: executor.rs  mod.rs
crates/api/src/sys/wasi/: README.md  cli.rs  clocks.rs  demo.rs  error.rs  filesystem.rs  http.rs  io.rs  mod.rs  preview1.rs  preview2.rs  random.rs  sockets.rs  types.rs
crates/api/src/vga/: color.rs  palette.rs
crates/api/src/wasi/: ctx.rs  definitions.rs  posix.rs  syscalls.rs
crates/api/src/wasm/: mod.rs
crates/bootloader/: Cargo.toml
crates/bootloader-api/: Cargo.toml
crates/bootloader-bios/boot_sector/: Cargo.toml
crates/bootloader-bios/common/: Cargo.toml
crates/bootloader-bios/stage-2/: Cargo.toml
crates/bootloader-bios/stage-3/: Cargo.toml
crates/bootloader-bios/stage-4/: Cargo.toml
crates/bootloader-common/: Cargo.toml
crates/bootloader-common/config/: Cargo.toml
crates/bootloader-uefi/: Cargo.toml
crates/bootloader/src/: boot_info.rs  kernel.rs  logger.rs  main.rs  memory.rs  modules.rs  util.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  logger.rs  main.rs
crates/kernel/src/api/: console.rs  fs.rs  io.rs  json.rs  mod.rs  process.rs  prompt.rs  realm.rs  regex.rs  shapes.rs  syscall.rs  time.rs
crates/kernel/src/api/config/: memory.rs
crates/kernel/src/api/data/: keycodes.rs  mod.rs  mouse.rs
crates/kernel/src/api/framebuffer/: pixel.rs
crates/kernel/src/api/memory/: mem.rs  memory_x86_64.rs  mod.rs  structs.rs
crates/kernel/src/api/memory/paging/: mapper.rs  mod.rs  table.rs  temporary_page.rs
crates/kernel/src/api/path/: lossy.rs  mod.rs
crates/kernel/src/api/types/: event.rs
crates/kernel/src/api/vga/: palette.rs
crates/kernel/src/api/wasi/: ctx.rs  definitions.rs  region.rs  syscalls.rs
crates/kernel/src/api/wasm/: mod.rs
crates/kernel/src/drivers/: mod.rs  virtio_net.rs
crates/kernel/src/sys/: acpi.rs  allocator.rs  cmos.rs  keyboard.rs  mem.rs  mod.rs  net_manager.rs  no_drop.rs  page_table_entry.rs  process.rs  ps2.rs  random.rs  realm.rs  state_store.rs  vga.rs
crates/kernel/src/sys/acpi/: mod.rs  sdt.rs
crates/kernel/src/sys/boot_info/: mod.rs  uefi.rs
crates/kernel/src/sys/cpu/: mod.rs
crates/kernel/src/sys/frame_alloc/: mod.rs  static_array_linked_list.rs
crates/kernel/src/sys/fs/: mod.rs  read_dir.rs
crates/kernel/src/sys/net/: pcnet.rs
crates/kernel/src/sys/page_alloc/: mod.rs  static_array_rb_tree.rs
crates/kernel/src/sys/pte_flags/: mod.rs  pte_aarch64.rs  pte_x86_64.rs
crates/kernel/src/sys/syscall/: number.rs  service.rs
crates/kernel/src/usr/: base64.rs  copy.rs  editor.rs  elf.rs  find.rs  hedgehog.rs  help.rs  hex.rs  httpd.rs  install.rs  ls.rs  memory.rs  mod.rs  mv.rs  net.rs  palette.rs  read.rs  realm.rs  shell.rs  socket.rs  vga.rs
crates/leb128/: Cargo.toml
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  raw.rs
crates/sys/: Cargo.toml
crates/uefi-bootloader/: Cargo.toml
crates/uefi-bootloader-api/: Cargo.toml
crates/uefi-bootloader-api/src/: lib.rs
crates/uefi-bootloader/src/: boot_info.rs  context.rs  kernel.rs  logger.rs  main.rs  mappings.rs  memory.rs  modules.rs
crates/uefi-bootloader/src/arch/: mod.rs
crates/usr/: Cargo.toml
demo/: README.md  index.html  package-lock.json  package.json
demo/public/: terminal_app.wasm
demo/src/: main.ts
dsk/ini/: banner.txt  boot.sh  shell.sh  version.txt
dsk/ini/palettes/: agave-dark.csv  synthwave.csv
dsk/var/www/: index.html
libs/atomic_linked_list/: Cargo.toml
libs/atomic_linked_list/src/: atomic_linked_list.rs  atomic_map.rs  lib.rs
libs/owned_borrowed_trait/: Cargo.toml
libs/port_io/: Cargo.toml
ports/runtime/: Cargo.toml
ports/wasmtime/: Cargo.toml
ports/wast/: Cargo.toml
src/: allocator.rs  api.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  sys.rs  vga.rs  vga_buffer.rs  wasm.rs
src/allocator/: fixed_size_block.rs
src/api/: color.rs  events.rs  font.rs  fs.rs  io.rs  mod.rs  syscall.rs
src/sys/: allocator.rs  ata.rs  console.rs  cpu.rs  exit.rs  gdt.rs  idt.rs  interrupts.rs  mem.rs  memory.rs  mod.rs  pci.rs  pic.rs  process.rs  serial.rs  time.rs  wasm.rs
src/task/: executor.rs  keyboard.rs
src/usr/: calc.rs  delete.rs  dhcp.rs  disk.rs  help.rs  host.rs  http.rs  httpd.rs  install.rs  list.rs  mod.rs  pow.rs  shell.rs  socket.rs  tcp.rs  user.rs  vga.rs  wasm.rs  write.rs
(+27 files in other folders)
