cargo-features = ["per-package-target"]

[package]
name = "agave-api"
version = "0.1.2"
edition = "2021"
default-target = "x86_64-unknown-none"

[lib]
test = false
bench = false

[dependencies]
object = { workspace = true }
unix_str = { workspace = true }
vek = { workspace = true }
arrayvec = { workspace = true }
noto-sans-mono-bitmap = { workspace = true }
crossbeam = { workspace = true }
conquer-once = { workspace = true }
bootloader_api = { workspace = true }
bootloader-boot-config = { workspace = true }
acpi = { workspace = true }
lazy_static = { workspace = true }
linked_list_allocator = { workspace = true }
uart_16550 = { workspace = true }
bitflags = { workspace = true }
time = { workspace = true }
libm = { workspace = true }
pic8259 = { workspace = true }
bit_field = { workspace = true }
spin = { workspace = true }
spinning_top = { workspace = true }
raw-cpuid = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }
wasmi = { workspace = true }
wasi = { workspace = true }
core2 = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
xmas-elf = { workspace = true }
log = { workspace = true }
crossbeam-queue = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 =  { workspace = true }
bootloader-x86_64-common = { workspace = true }
iced-x86 = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3.1"