[package]
name = "bootloader-x86_64-uefi"
version = "0.1.0"
edition = "2021"
description = "UEFI bootloader for x86_64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = {  path = "../bootloader-api"}
bootloader-x86_64-common = { path = "../bootloader-common" }
bootloader-boot-config = { path = "../bootloader-common/config" }
log = "0.4.14"
x86_64 = "0.14.8"
serde-json-core = "0.5.0"
uefi = "0.20.0"
