cargo-features = ["per-package-target"]

[package]
name = "agave-kernel"
version = "0.1.2"
edition = "2021"
default-target = "x86_64-unknown-none"

[[bin]]
name = "agave-kernel"
test = false
bench = false

[dependencies]
bootloader_api = { workspace = true }
bootloader-boot-config = { workspace = true }
acpi = { workspace = true }
spin =  { workspace = true }
core2 =  { workspace = true }
log = { workspace = true }
agave-api = { path = "../api" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 =  { workspace = true }

