cargo-features = ["per-package-target"]

[package]
name = "agave-kernel"
version.workspace =  true
edition = "2021"
# default-target = "x86_64-unknown-none"

[[bin]]
name = "agave-kernel"
test = false
bench = false

[dependencies]
agave-api = { path = "../api" }
acpi = { workspace = true }
bootloader_api = { workspace = true }
bootloader-boot-config = { workspace = true }
core2 =  { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
spin =  { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 =  { workspace = true }

