[package]
name = "bootloader-x86_64-bios-stage-2"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"
description = "Second BIOS stage of the `bootloader` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbr-nostd = "0.1.0"
byteorder = { version = "1.4.3", default-features = false }
bootloader-x86_64-bios-common = { path = "../common" }

# This currently causes a cargo warning, but it is required for publishing to crates.io.
# See https://github.com/rust-lang/cargo/issues/8264 for details.
[profile.stage-2]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = true
