[package]
name = "bootloader-x86_64-bios-stage-4"
version = "0.1.0"
edition = "2021"
description = "Fourth BIOS stage of the `bootloader` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = {  path = "../../bootloader-api"}
bootloader-x86_64-common = { path = "../../bootloader-common" }
bootloader-x86_64-bios-common = { path = "../common" }
bootloader-boot-config = { path = "../../bootloader-common/config" }
log = "0.4.14"
x86_64 = "0.14.8"
rsdp = "2.0.0"
usize_conversions = "0.2.0"
serde-json-core = "0.5.0"

# This currently causes a cargo warning, but it is required for publishing to crates.io.
# See https://github.com/rust-lang/cargo/issues/8264 for details.
[profile.stage-4]
inherits = "release"
debug = true
overflow-checks = true
